2013-06-17  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.3.1

	* added the typo3 version dependency for the ter clean up process

2012-12-10  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.3.0

    * changed the js library for generating the snow fall to jquery.snow.js by 
      Ivan Lazarevic 2012 for performance reasons (new TER release)

2011-12-01  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.2.1

	* debugging: avoiding a security leak // Thanks to Bernd Wilke for the hint

2011-11-29  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.2.0

	* debugging: modal layer now swaps the whole page even if the dialog box 
	  is larger than the document itself
	* necessary changes in the manual

2011-11-29  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.1.1

	* debugging of some embarrassing typo :-/

2011-11-29  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.1.0

	* first TER upload (with manual)

2011-11-29  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.12

	* debugging the code rendering in the ajax mode

2011-11-29  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.11

	* some minor localization debuggings

2011-11-29  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.10

	* added the correct ext icons

2011-11-29  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.9

	* general code refactoring
	* debugging of generating the url to the page to be fetched for the ajax 
	  output

2011-11-28  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.8

	* included the check for an already integrated jquery library on includes 
	  it when necessary
	* new graphlical button for closing the dialog box

2011-11-28  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.7

	* debugging of the wrong behaviour of the dialogclose 

2011-11-26 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.6
