@@ -1,3 +1,7 @@
+2013-11-27  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.3.2
+
+	* changed the state of the extension to obsolete
+
 2013-06-17  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.3.1
 
 	* added the typo3 version dependency for the ter clean up process
